Initial file browsing support

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Culinam</title>
+    <title>Meltdown</title>
     <style>
       html, body, #app {
         margin: 0;
